# quiz-master

quiz-master/: CMakeLists.txt  main.c  quiz_utility.c  quiz_utility.h  sample.json  score_screen.c  score_screen.h  welcome_screen.c  welcome_screen.h
